# fullstack-starter

./: .cursorrules  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20240101000000_initial.sql  20240503_create_messages.sql  20240504_add_author_to_messages.sql
backend/scripts/: dev.sh  test.ps1  test.sh
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs  s3.rs
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts
frontend/src/: App.tsx
frontend/src/components/: Messages.css  Messages.test.tsx  Messages.tsx
frontend/tests/: Messages.test.tsx
scripts/: rename-project.js
