[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
dotenv = "0.15"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
home = "0.5.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
aws-config = { version = "0.57.2", features = ["rustls"] }
aws-sdk-s3 = { version = "0.36.0", features = ["rustls"] }
aws-types = "0.57.2"
reqwest = { version = "0.11", features = ["json"] } 